--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </body>	
 
 	<!-- JQuery -->
-	<script src="./scripts/jquery-3.1.0.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 	<!-- GSAP -->
-	<script src="./scripts/TweenMax.min.js"/></script>	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"/></script>	
 	
 	<!-- My script -->
 	<script src="./scripts/adminHeIs_scripting.js"/></script>	
