--- a/chargesCalculator/index.html
+++ b/chargesCalculator/index.html
@@ -28,7 +28,7 @@
 		<ol id="OTC">
 			<li class="charge one">
 				<p class="chargeName">Click here to change description</p>
-				<input class="desc" type="hidden" placeholder="Click here to change description"/>
+				<input class="desc" type="hidden" value="Click here to change description"/>
 				<input class="OTCin" type="text"/>
 			</li>
 		</ol>
@@ -43,7 +43,7 @@
 		<ol id="MRC">
 			<li class="charge monthly">
 				<p class="chargeName">Click here to change description</p>
-				<input class="desc" type="hidden" placeholder="Click here to change description"/>
+				<input class="desc" type="hidden" value="Click here to change description"/>
 				<input class="MRCin" type="text"/>
 			</li>
 		</ol>
