--- a/suns/index.html
+++ b/suns/index.html
@@ -18,13 +18,69 @@
 	<h2 id="Level_en"></h2>
 	
 	<ul id="areas">
-		<li><input type="checkbox" class="area" value="Bianco Hills">Bianco Hills</input></li>
-		<li><input type="checkbox" class="area" value="Gelato Beach">Gelato Beach</input></li>
-		<li><input type="checkbox" class="area" value="Pianta Village">Pianta Village</input></li>
-		<li><input type="checkbox" class="area" value="Pinna Park">Pinna Park</input></li>
-		<li><input type="checkbox" class="area" value="Ricco Harbor">Ricco Harbor</input></li>
-		<li><input type="checkbox" class="area" value="Sirena Beach">Sirena Beach</input></li>
-		<li><input type="checkbox" class="area" value="Noki Bay">Noki Bay</input></li>
+		<li><input type="checkbox" class="area" id="BH">Bianco Hills</input></li>
+		<li><input type="checkbox" class="area" id="GB">Gelato Beach</input></li>
+		<li><input type="checkbox" class="area" id="PV">Pianta Village</input></li>
+		<li><input type="checkbox" class="area" id="PP">Pinna Park</input></li>
+		<li><input type="checkbox" class="area" id="RH">Ricco Harbor</input></li>
+		<li><input type="checkbox" class="area" id="SB">Sirena Beach</input></li>
+		<li><input type="checkbox" class="area" id="NB">Noki Bay</input></li>
+	</ul>
+	
+	<ul id="shines">
+		
+		<li><input type="checkbox" class="bianco shine" value="Bianco 1">Bianco 1</input></li>
+		<li><input type="checkbox" class="bianco shine" value="Bianco 2">Bianco 2</input></li>
+		<li><input type="checkbox" class="bianco shine" value="Bianco 3">Bianco 3</input></li>
+		<li><input type="checkbox" class="bianco shine" value="Bianco 4">Bianco 4</input></li>
+		<li><input type="checkbox" class="bianco shine" value="Bianco 5">Bianco 5</input></li>
+		<li><input type="checkbox" class="bianco shine" value="Bianco 6">Bianco 6</input></li>
+		<li><input type="checkbox" class="bianco shine SM" value="Bianco 7">Bianco 7</input></li>
+		
+		<li><input type="checkbox" class="gelato shine skip" value="Gelato 1 (Gelato Skip)">Gelato 1 (Gelato Skip)</input></li>
+		<li><input type="checkbox" class="gelato shine SM" value="Gelato 7">Gelato 7</input></li>
+		
+		<li><input type="checkbox" class="pianta shine" value="Pianta 1">Pianta 1</input></li>
+		<li><input type="checkbox" class="pianta shine" value="Pianta 2">Pianta 2</input></li>
+		<li><input type="checkbox" class="pianta shine" value="Pianta 3">Pianta 3</input></li>
+		<li><input type="checkbox" class="pianta shine" value="Pianta 4">Pianta 4</input></li>
+		<li><input type="checkbox" class="pianta shine" value="Pianta 5">Pianta 5</input></li>
+		<li><input type="checkbox" class="pianta shine" value="Pianta 6">Pianta 6</input></li>
+		<li><input type="checkbox" class="pianta shine SM" value="Pianta 7">Pianta 7</input></li>
+		
+		<li><input type="checkbox" class="skip" value="Honey Skip">Honey Skip</input></li>
+		
+		<li><input type="checkbox" class="pinna shine" value="Pinna 1">Pinna 1</input></li>
+		<li><input type="checkbox" class="pinna shine" value="Pinna 2">Pinna 2</input></li>
+		<li><input type="checkbox" class="pinna shine" value="Pinna 3">Pinna 3</input></li>
+		<li><input type="checkbox" class="pinna shine" value="Pinna 4">Pinna 4</input></li>
+		<li><input type="checkbox" class="pinna shine" value="Pinna 5">Pinna 5</input></li>
+		<li><input type="checkbox" class="pinna shine" value="Pinna 6">Pinna 6</input></li>
+		<li><input type="checkbox" class="pinna shine SM" value="Pinna 7">Pinna 7</input></li>
+		
+		<li><input type="checkbox" class="ricco shine" value="Ricco 1">Ricco 1</input></li>
+		<li><input type="checkbox" class="ricco shine" value="Ricco 2">Ricco 2</input></li>
+		<li><input type="checkbox" class="ricco shine" value="Ricco 3">Ricco 3</input></li>
+		<li><input type="checkbox" class="ricco shine" value="Ricco 4">Ricco 4</input></li>
+		<li><input type="checkbox" class="ricco shine" value="Ricco 5">Ricco 5</input></li>
+		<li><input type="checkbox" class="ricco shine" value="Ricco 6">Ricco 6</input></li>
+		<li><input type="checkbox" class="ricco shine SM" value="Ricco 7">Ricco 7</input></li>
+		
+		<li><input type="checkbox" class="sirena shine" value="Sirena 1">Sirena 1</input></li>
+		<li><input type="checkbox" class="sirena shine" value="Sirena 2">Sirena 2</input></li>
+		<li><input type="checkbox" class="sirena shine" value="Sirena 3">Sirena 3</input></li>
+		<li><input type="checkbox" class="sirena shine" value="Sirena 4">Sirena 4</input></li>
+		<li><input type="checkbox" class="sirena shine" value="Sirena 5">Sirena 5</input></li>
+		<li><input type="checkbox" class="sirena shine" value="Sirena 6">Sirena 6</input></li>
+		<li><input type="checkbox" class="sirena shine SM" value="Sirena 7">Sirena 7</input></li>
+		
+		<li><input type="checkbox" class="noki shine" value="Noki 1">Noki 1</input></li>
+		<li><input type="checkbox" class="noki shine" value="Noki 2">Noki 2</input></li>
+		<li><input type="checkbox" class="noki shine" value="Noki 3">Noki 3</input></li>
+		<li><input type="checkbox" class="noki shine" value="Noki 4">Noki 4</input></li>
+		<li><input type="checkbox" class="noki shine" value="Noki 5">Noki 5</input></li>
+		<li><input type="checkbox" class="noki shine" value="Noki 6">Noki 6</input></li>
+		<li><input type="checkbox" class="noki shine SM" value="Noki 7">Noki 7</input></li>
 	</ul>
 </body>
 </html>
