--- a/cases.html
+++ b/cases.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<link href="cases.css" rel="stylesheet"/>
+		<link href="./styles/casesStyles.css" rel="stylesheet"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript"></script>
-		<script src="cases.js"></script>		
+		<script src="./scripts/casesScripts.js"></script>		
 	</head>
 	
 	<body>
