charge calculator migration
subdir removed, files moved to appropriate dirs

--- a/charges-calculator.html
+++ b/charges-calculator.html
@@ -3,9 +3,9 @@
 	<!-- JQuery 3.1.1 https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js-->
 	<script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	
-	<script language="javascript"  type="text/javascript" src="scripts.js"></script>
+	<script language="javascript"  type="text/javascript" src="./scripts/charges-calc_scripts.js"></script>
 	
-	<link href="styles.css" type="text/css" rel="stylesheet"/>
+	<link href="./styles/charges-calc_styles.css" type="text/css" rel="stylesheet"/>
 	
 </head>
 
