--- a/PWGen.html
+++ b/PWGen.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href="stylinOnEm.css" rel="stylesheet"/>
+		<link href="./styles/PWGen_styles.css" rel="stylesheet"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript"></script>
 		
 		
@@ -46,6 +46,6 @@
 			<input type="text" id="generatedPW" placeholder="Password"/>
 		</div>
 		
-		<script src="javaIsScripted.js" type="text/javascript"></script>
+		<script src="./scripts/PWGen_scripts.js" type="text/javascript"></script>
 	</body>
 </html>
