String Explosion migration

--- a/StringExplosion.html
+++ b/StringExplosion.html
@@ -3,9 +3,9 @@
 	<!-- JQuery 3.1.1 https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js-->
 	<script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	
-	<script language="javascript"  type="text/javascript" src="scripts.js"></script>
+	<script language="javascript"  type="text/javascript" src="./scripts/StringExplosion_scripts.js"></script>
 	
-	<link href="styles.css" type="text/css" rel="stylesheet"/>
+	<link href="./styles/StringExplosion_styles.css" type="text/css" rel="stylesheet"/>
 	
 </head>
 
