--- a/StupidDumb.html
+++ b/StupidDumb.html
@@ -3,7 +3,7 @@
 
 	<title>Why did I do this</title>
 	
-	<link href="StylinOnEm.css" rel="stylesheet" />
+	<link href="./styles/StupidDumb_styles.css" rel="stylesheet" />
 	<link rel="icon" type="image/jpg" href="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/4c/4c772e48c522f09e6078987a9895fd33a8cec245_full.jpg" />
 	
 	<!-- jQuery via Google CDN -->
@@ -69,5 +69,5 @@
 	
 </body>
 
-	<script type="text/javascript" src="AdminHeScripting.js"></script>
+	<script type="text/javascript" src="./scripts/StupidDumb_scripts.js"></script>
 </html>
