Home page update
Finally
After migrating all projects to proper subdirs, all projects are linked
eventually I'll link everything to the home page

--- a/index.html
+++ b/index.html
@@ -4,21 +4,101 @@
 </head>
 
 <body>
-	<h1 id="name">Jerm</h1>
+	<h1 id="name">Jerm's Projects</h1>
+	<a href="https://github.com/JermJermJerm/JermJermJerm.github.io">
+		<h4>My Github →</h4>
+	</a>
+
+	
+	<!--
+	<div class="descContainer">
+		<h3 class="descHeader" id="SunsSR">Sunshine Split Randomizer</h3>
+		<p class="description">
+			<span><a href="https://JermJermJerm.github.io/SunsSR.html">View →</a></span>
+			<br/>
+			<span><a href="https://github.com/JermJermJerm/JermJermJerm.github.io">View on Github →</a></span>
+			<br/>
+			
+			This is a randomizer made specifically for each "split", or segment, of the Super Mario Sunshine any% route I use.
+			
+		</p>
+	</div>
+	-->
 	
 	<div class="descContainer">
-		<h3 class="descHeader" id="who">Who?</h3>
+		<h3 class="descHeader" id="SunsSR">Sunshine Split Randomizer</h3>
 		<p class="description">
-			Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample text 
+			<span><a href="https://JermJermJerm.github.io/SunsSR.html">View →</a></span>
+			<br/>
+			
+			This is a randomizer made specifically for each "split", or segment, of the Super Mario Sunshine any% route I use.
+			
+		</p>
+	</div>
+	
+	
+	<div class="descContainer">
+		<h3 class="descHeader" id="charge-calc">Charges-Calculator</h3>
+		<p class="description">
+			<span><a href="https://JermJermJerm.github.io/SunsSR.html">View →</a></span>
+			<br/>
+			<span><a href="https://github.com/JermJermJerm/JermJermJerm.github.io">View on Github →</a></span>
+			<br/>
+			This tool calculates totals for one-time charges, recurring fees over a given amount of payment periods, and combined totals.
+			
 		</p>
 	</div>
 	
 	<div class="descContainer">
-		<h3 class="descHeader" id="what">What?</h3>
+		<h3 class="descHeader" id="PWGen">Password Generator</h3>
 		<p class="description">
-			Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample text Sample text 
-		</p>	
+			<span><a href="https://JermJermJerm.github.io/PWGen.html">View →</a></span>
+			<br/>
+			Customizable password generator with options for length, character cases, numbers, and special characters.
+			
+		</p>
 	</div>
+	
+	<div class="descContainer">
+		<h3 class="descHeader" id="StrExp">String Explosion</h3>
+		<p class="description">
+			<span><a href="https://jermjermjerm.github.io/StringExplosion.html">View →</a></span>
+			<br/>
+			This tool was made to separate strings on a delimiting character - specifically, to split directories in my work PC's %PATH% string.
+			
+		</p>
+	</div>
+	
+	<div class="descContainer">
+		<h3 class="descHeader" id="minifier">Minifier</h3>
+		<p class="description">
+			<span><a href="https://jermjermjerm.github.io/minifier.html">View →</a></span>
+			<br/>
+			I made this tool to minimize text, or remove all the whitespace, to turn s t r i n g s into strings.
+			
+		</p>
+	</div>
+	
+	<div class="descContainer">
+		<h3 class="descHeader" id="cases">Cases</h3>
+		<p class="description">
+			<span><a href="https://jermjermjerm.github.io/cases.html">View →</a></span>
+			<br/>
+			You know how some fonts can make it impossible to distinguish a lowercase L from a capital i?
+			
+		</p>
+	</div>
+	
+	<div class="descContainer">
+		<h3 class="descHeader" id="StupidDumb">StupidDumb</h3>
+		<p class="description">
+			<span><a href="https://jermjermjerm.github.io/StupidDumb.html">View →</a></span>
+			<br/>
+			A friend tried to send me an executable of his program that turned regular text into alphabetical emojis - Windows Defender wouldn't let me run it, so I made my own.
+			
+		</p>
+	</div>
+	
 	
 </body>	
 
@@ -30,8 +110,8 @@
 	-->
 	 
 	<!-- My script -->
-	<script src="./scripts/adminHeIs_scripting.js"/></script>	
+	<script src="./scripts/index_scripts.js"/></script>	
 	
 	<!-- Styles -->
-	<link rel="stylesheet" href="./styles/stylesstylesstyles.css"/>
+	<link rel="stylesheet" href="./styles/index_styles.css"/>
 </html>
