correcting da link

--- a/SunsSR.html
+++ b/SunsSR.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div id="thispageheaderrighthere">
-		Made by Jerm | <a href="https://github.com/JermJermJerm/JermJermJerm.github.io/tree/master/suns">view on girth hub</a>
+		Made by Jerm | <a href="https://github.com/JermJermJerm/JermJermJerm.github.io/blob/master/SunsSR.html">view on girth hub</a>
 	</div>
 
 	<div id="topContainer">
