Add LiveSplit Dashboard sample
yup

--- a/index.html
+++ b/index.html
@@ -9,22 +9,6 @@
 		<h4>My Github →</h4>
 	</a>
 
-	
-	<!--
-	<div class="descContainer">
-		<h3 class="descHeader" id="SunsSR">Sunshine Split Randomizer</h3>
-		<p class="description">
-			<span><a href="https://JermJermJerm.github.io/SunsSR.html">View →</a></span>
-			<br/>
-			<span><a href="https://github.com/JermJermJerm/JermJermJerm.github.io">View on Github →</a></span>
-			<br/>
-			
-			This is a randomizer made specifically for each "split", or segment, of the Super Mario Sunshine any% route I use.
-			
-		</p>
-	</div>
-	-->
-	
 	<div class="descContainer">
 		<h3 class="descHeader" id="SunsSR">Sunshine Split Randomizer</h3>
 		<p class="description">
@@ -93,6 +77,16 @@
 			<span><a href="https://jermjermjerm.github.io/StupidDumb.html">View →</a></span>
 			<br/>
 			A friend tried to send me an executable of his program that turned regular text into alphabetical emojis - Windows Defender wouldn't let me run it, so I made my own.
+			
+		</p>
+	</div>
+	
+	<div class="descContainer">
+		<h3 class="descHeader" id="LiveSplitDashboard">LiveSplit Dashboard</h3>
+		<p class="description">
+			<span><a href="https://jermjermjerm.github.io/LiveSplitDashboard.html">View →</a></span>
+			<br/>
+			A dashboard made for controlling LiveSplit via the LiveSplit Server component. Visit <a href="https://livesplit.org">Livesplit.org</a>
 			
 		</p>
 	</div>
