--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
 		</p>
 	</div>
 	
+	<div class="descContainer">
+		<h3 class="descHeader" id="numpad">Numpad</h3>
+		<p class="description">
+			<span><a href="https://jermjermjerm.github.io/numpad.html">View →</a></span>
+			<br/>
+			An on-screen numpad prototype for tablet use
+			
+		</p>
+	</div>
+	
 	
 </body>	
 
