--- a/numpad.html
+++ b/numpad.html
@@ -14,13 +14,16 @@
 	<div id="leftBlock">
 		<ol>
 			<li>
-			Field1: <input type="text" class="numField">
+			Field1: <input type="text" class="numField" name="Field1" readonly>
+			<input type="button" class="clearButt" value="Clear">
 			</li>
 			<li>
-			Field2: <input type="text" class="numField">
+			Field2: <input type="text" class="numField" name="Field2" readonly>
+			<input type="button" class="clearButt" value="Clear">
 			</li>
 			<li>
-			Field3: <input type="text" class="numField">
+			Field3: <input type="text" class="numField" name="Field3" readonly>
+			<input type="button" class="clearButt" value="Clear">
 			</li>
 		</ol>
 	</div>
