index page fix; publish hades
had some broken logic for showing and hiding project descriptions lol

hades is now listed on the index page

--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
 		
 	</div>
 	
+	<div class="descContainer">
+		<h3 class="descHeader" id="hades">Hades Nuts</h3>
+		<p class="description">
+			<span><a href="https://jermjermjerm.github.io/hades.html">View →</a></span>
+			<br/>
+			WIP Hades boon builder. Started 12/14/2020, no ETA at all whatsoever 
+		
+	</div>
 	
 </body>	
 
